# URLShortner

./: .gitignore  CMakeLists.txt  testing  testing.cpp
.cph/: .a.cpp_9f53c667e7cbb5ecf3a9d35004ca68f9.prob  .testing.cpp_0dd2139c393f6568d188acaf260df404.prob
data/: url-mapping.txt
include/: response.hpp
include/database/: main-database.hpp  user.hpp
include/request-parser/auth/: register.parser.hpp
include/routes/: 404NotFound.hpp
include/routes/auth/: login.hpp  register.hpp
include/routes/url/: redirect.hpp  url-shorten.hpp
include/routes/user/: get-all-users.hpp  get-user.hpp
include/utils/: helper.hpp  short-url-generator.hpp
public/: login.html  register.html  url-shorter.html
src/: response.cpp  server.cpp
src/database/: user.cpp
src/request-parser/auth/: register.parser.cpp
src/routes/: 404NotFound.cpp
src/routes/auth/: login.cpp  register.cpp
src/routes/url/: redirect.cpp  url-shorten.cpp
src/routes/user/: get-all-users.cpp  get-user.cpp
src/utils/: helper.cpp  short-url-generator.cpp
